jdy-production.bak/v7g8/ingress/log-redis.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/custom-response-headers: Env:V7G1
  name: ingress-log-redis
  namespace: ns-v7g8
spec:
  tls:
  - hosts:
    - v7log-redis.jdy.com
    secretName: tls-secret
  rules:
  - host: v7log-redis.jdy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: log-redis
          servicePort: 6379
